--- a/ciao-cda-builder/Dockerfile
+++ b/ciao-cda-builder/Dockerfile
@@ -1,5 +1,5 @@
 # Docker container for ciao-cda-builder CIP
-# Version 0.4
+# Version 0.5
 FROM ubuntu:14.04
 MAINTAINER HSCIC
 RUN apt-get update
@@ -12,5 +12,7 @@ RUN unzip ciao-cda-builder-1.0.0-SNAPSHOT-bin.zip -d /opt/ciao-cda-builder
 VOLUME ["/root/.ciao/"]
 # Jolokia Agent port
 EXPOSE 8778
+# Hazelcast Server port
+EXPOSE 5701
 # Entry point
 ENTRYPOINT ["/opt/ciao-cda-builder/ciao-cda-builder-1.0.0-SNAPSHOT/run.sh"]
