--- a/ciao-transport-spine/Dockerfile
+++ b/ciao-transport-spine/Dockerfile
@@ -1,5 +1,5 @@
 # Docker container for ciao-transport-spine CIP
-# Version 0.3
+# Version 0.4
 FROM ubuntu:14.04
 MAINTAINER HSCIC
 RUN apt-get update
@@ -12,6 +12,8 @@ RUN unzip ciao-transport-spine-1.0.0-SNAPSHOT-bin.zip -d /opt/ciao-transport-spi
 EXPOSE 8122
 # Jolokia Agent port
 EXPOSE 8778
+# Hazelcast Server port
+EXPOSE 5701
 # Standard ciao configuration file folder
 VOLUME ["/root/.ciao/"]
 # Keystores folder
