--- a/ciao-docs-finalizer/Dockerfile
+++ b/ciao-docs-finalizer/Dockerfile
@@ -1,5 +1,5 @@
 # Docker container for ciao-docs-finalizer CIP
-# Version 0.3
+# Version 0.4
 FROM ubuntu:14.04
 MAINTAINER HSCIC
 RUN apt-get update
@@ -8,11 +8,13 @@ RUN apt-get install -y openjdk-7-jdk wget unzip
 RUN wget http://hcdn-build1.cloudapp.net/view/CIAO/job/ciao-docs-finalizer/ws/target/ciao-docs-finalizer-1.0.0-SNAPSHOT-bin.zip
 # Unzip into /opt/ciao-docs-finalizer
 RUN unzip ciao-docs-finalizer-1.0.0-SNAPSHOT-bin.zip -d /opt/ciao-docs-finalizer
+# Standard ciao configuration file folder
+VOLUME ["/root/.ciao"]
+# In-progress file folder
+VOLUME ["/opt/ciao-docs-finalizer/in-progress"]
 # Jolokia Agent port
 EXPOSE 8778
 # Hazelcast Server port
-EXPOSE 5701
-# Standard ciao configuration file folder
-VOLUME ["/root/.ciao/"]
+EXPOSE 5702
 # Entry point
 ENTRYPOINT ["/opt/ciao-docs-finalizer/ciao-docs-finalizer-1.0.0-SNAPSHOT/run.sh"]
