--- a/ciao-docs-parser/Dockerfile
+++ b/ciao-docs-parser/Dockerfile
@@ -8,6 +8,8 @@ RUN apt-get install -y openjdk-7-jdk wget unzip
 RUN wget http://hcdn-build1.cloudapp.net/view/CIAO/job/ciao-docs-parser/ws/ciao-docs-parser/target/ciao-docs-parser-1.0.0-SNAPSHOT-bin.zip
 # Unzip into /opt/ciao-docs-parser
 RUN unzip ciao-docs-parser-1.0.0-SNAPSHOT-bin.zip -d /opt/ciao-docs-parser
+# Copy log4j.properties file into config folder
+COPY log4j.properties /opt/ciao-docs-parser/ciao-docs-parser-1.0.0-SNAPSHOT/config
 # Standard ciao configuration file folder
 VOLUME ["/root/.ciao"]
 # Input file folder
