--- a/ciao-transport-dts/Dockerfile
+++ b/ciao-transport-dts/Dockerfile
@@ -1,5 +1,5 @@
 # Docker container for ciao-transport-dts CIP
-# Version 0.2
+# Version 0.3
 FROM ubuntu:14.04
 MAINTAINER HSCIC
 RUN apt-get update
@@ -8,10 +8,10 @@ RUN apt-get install -y openjdk-7-jdk wget unzip
 RUN wget http://hcdn-build1.cloudapp.net/view/CIAO/job/ciao-transport-dts/ws/target/ciao-transport-dts-1.0.0-SNAPSHOT-bin.zip
 # Unzip into /opt/ciao-transport-dts
 RUN unzip ciao-transport-dts-1.0.0-SNAPSHOT-bin.zip -d /opt/ciao-transport-dts
+# Copy log4j.properties file into config folder
+COPY log4j.properties /opt/ciao-transport-dts/ciao-transport-dts-1.0.0-SNAPSHOT/config
 # Jolokia Agent port
 EXPOSE 8778
-# Hazelcast Server port
-EXPOSE 5701
 # Standard ciao configuration file folder
 VOLUME ["/root/.ciao/"]
 # Entry point
